--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: America/New_York
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Development Corps # the main title
+title: Dev Syndicate # the main title
 
 tagline: Developing the Future # it will display as the sub-title
 
@@ -23,10 +23,10 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://Development-Corps.github.io"
+url: "https://The-Dev-Syndicate.github.io"
 
 github:
-  username: Development-Corps # change to your github username
+  username: lunar_vagabond # change to your github username
 
 twitter:
   username: lunar_vagabond # change to your twitter username
